@@ -1,9 +1,9 @@
-package com.volod.streaming;
+package com.volod.streaming.repositories;
 
+import com.volod.streaming.TestcontainersConfiguration;
 import com.volod.streaming.dto.requests.RequestVideos;
 import com.volod.streaming.model.AbstractAuditPersistable_;
 import com.volod.streaming.model.Video;
-import com.volod.streaming.repositories.VideoRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
@@ -12,6 +12,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 
 import java.util.Comparator;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -27,21 +28,22 @@ class VideoRepositoryTest {
     @Test
     void findAllPageableTest() {
         // Arrange
-        var videos = IntStream.range(0, 30).mapToObj(i -> Video.random()).toList();
+        var videos = IntStream.range(0, 10).mapToObj(i -> Video.random(true)).collect(Collectors.toList());
+        videos.addAll(IntStream.range(0, 30).mapToObj(i -> Video.random(false)).toList());
         this.videoRepository.saveAll(videos);
 
         // Act + Assert
         var pageRequest = PageRequest.of(0, 10, Sort.by(DESC, AbstractAuditPersistable_.UPDATED_AT));
-        assertThat(this.videoRepository.findAll(pageRequest)).hasSize(10)
-                .extracting(Video::getUpdatedAt).isSortedAccordingTo(Comparator.reverseOrder());
+        assertThat(this.videoRepository.findAllByHiddenIsFalse(pageRequest)).hasSize(10).noneMatch(Video::isHidden)
+                .extracting(Video::getUpdatedAt).isNotEqualTo(0).isSortedAccordingTo(Comparator.reverseOrder());
         pageRequest = pageRequest.next();
-        assertThat(this.videoRepository.findAll(pageRequest)).hasSize(10)
-                .extracting(Video::getUpdatedAt).isSortedAccordingTo(Comparator.reverseOrder());
+        assertThat(this.videoRepository.findAllByHiddenIsFalse(pageRequest)).hasSize(10).noneMatch(Video::isHidden)
+                .extracting(Video::getUpdatedAt).isNotEqualTo(0).isSortedAccordingTo(Comparator.reverseOrder());
         pageRequest = pageRequest.next();
-        assertThat(this.videoRepository.findAll(pageRequest)).hasSize(10)
-                .extracting(Video::getUpdatedAt).isSortedAccordingTo(Comparator.reverseOrder());
-        pageRequest = pageRequest.next();
-        assertThat(this.videoRepository.findAll(pageRequest)).isEmpty();
+        var lastSlice = this.videoRepository.findAllByHiddenIsFalse(pageRequest);
+        assertThat(lastSlice.isLast()).isTrue();
+        assertThat(lastSlice).hasSize(10).noneMatch(Video::isHidden)
+                .extracting(Video::getUpdatedAt).isNotEqualTo(0).isSortedAccordingTo(Comparator.reverseOrder());
     }
 
     @Test
